created cart functionality and added utils
