# api/helpers/cart-model.js
@@ -1,0 +1,10 @@
+const mongoose = require('mongoose');
+const Schema = mongoose.Schema;
+
+
+const cartSchema = new Schema({
+    cartItems:[{productId:Schema.ObjectId,quantity:Number}]
+})
+
+module.exports = mongoose.model('Cart',cartSchema);
+
